--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 </div>
                 <h1 class="mbr-fonts-style align-center mbr-bold display-1">Spirit of<br>the Cocktail</h1>
 
-                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page2.html">Enter</a> <a class="btn btn-md btn-success display-4" href="mailto:spiritofcocktail@gmail.com?subject=Request%20A%20Spot" target="_blank">Request a Spot</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="contactus.html">Enter</a> <a class="btn btn-md btn-success display-4" href="mailto:spiritofcocktail@gmail.com?subject=Request%20A%20Spot" target="_blank">Request a Spot</a></div>
             </div>
             <div class="mbr-col-sm-12 mbr-col-md-12 mbr-col-lg-6 mbr-col-xl-7 img-col">
                                 <amp-img src="assets/images/webp.net-resizeimage-2-734x671.jpg" alt="Spirit of the Cocktail Logo" width="1510.661698956781" height="1381" layout="responsive">
